Add a first pass at CLI

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,9 +29,13 @@ package-dir =
 install-requires =
     github3.py >= 1.2.0
     attrs >= 18.2.0
+    structlog >= 18.2.0
 
 [options.packages.find]
 where = src
+
+[options.extras_require]
+colour = colorama
 
 [bdist_wheel]
 universal = 1
